<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/icon_close_nor"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="157dp"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:text="@string/record_permissions_title"/>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="5dp"
        android:textColor="#99FFFFFF"
        android:textSize="15sp"
        android:text="@string/record_permissions_hint"/>

    <LinearLayout
        android:id="@+id/layout_allow_camera"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_hint"
        android:layout_marginTop="65dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/bg_record_permission_item">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_photo"/>
        <TextView
            android:id="@+id/tv_allow_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/record_permissions_allow_camera" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_allow_microphone"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_allow_camera"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/bg_record_permission_item">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_voice"/>
        <TextView
            android:id="@+id/tv_allow_microphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/record_permissions_allow_microphone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_allow_storage"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_allow_microphone"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/bg_record_permission_item">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_file"/>
        <TextView
            android:id="@+id/tv_allow_storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/record_permissions_allow_storage" />
    </LinearLayout>

</RelativeLayout>

